Sat Aug 28 10:30:08 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING,PLATFORMS: Move PLATFORMS information to the wiki and replace
	  with a pointer.

Sat Aug 28 03:15:47 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/queryoptimiser.cc: Need to avoid excess precision on m68k
	  when targetting models 68010, 68020, 68030 as well as 68000.

Tue Aug 24 05:54:27 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Update for 1.2.3.

Tue Aug 24 05:52:47 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Aug 16 16:46:19 GMT 2010  Olly Betts <olly@survex.com>

	* common/closefrom.cc: Use /dev/fd on Mac OS X.

Mon Aug 16 16:18:26 GMT 2010  Olly Betts <olly@survex.com>

	* common/closefrom.cc: Need safeerrno.h and safeunistd.h on non-Linux
	  platforms too.

Mon Aug 16 15:47:48 GMT 2010  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc,common/Makefile.mk,common/closefrom.cc,
	  common/closefrom.h,configure.ac,net/progclient.cc: Use closefrom()
	  if available, otherwise provide our own implementation (optimised
	  to some extent for many platforms).

Sun Aug 15 12:43:04 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Sun Aug 15 12:11:26 GMT 2010  Olly Betts <olly@survex.com>

	* xapian-core.spec.in: Update BuildRequires to specify libuuid-devel
	  instead of e2fsprogs-devel.

Sun Aug 15 11:30:05 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING,INSTALL,common/safeuuid.h,common/win32_uuid.cc,
	  common/win32_uuid.h,configure.ac: libuuid moved from e2fsprogs to
	  util-linux-ng about a year ago, so update documentation, comments,
	  and configure error messages to reflect this.  Issue reported by
	  David Jeske on xapian-devel list.

Sun Aug 15 07:58:51 GMT 2010  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_remotetcp.cc: Under __WIN32__, we need
	  <io.h> for _open_osfhandle() (ticket#495).

Sun Aug 15 07:10:25 GMT 2010  Olly Betts <olly@survex.com>
