@@ -23,6 +23,8 @@
 
 #include <cstring>
 
+using namespace std;
+
 inline bool bad_cont(unsigned char ch) { return (ch & 0xc0) != 0x80; }
 
 namespace Xapian {
